Format code (header, tab, indentation, spacing, cleanup)
git-svn-id: https://efficio.atlassian.net/svn/GCP/trunk/GermplasmStudyBrowser@208 4ebb2e00-0138-4608-bc6e-edf3948d4863